# nel_os_uefi

./: .gitignore  README.md
.gitea/workflows/: build.yaml  check.yaml
nel_os_bootloader/: Cargo.toml  bochs.out  bochsrc  clean.sh  create-iso.sh  run-qemu.sh  run.sh  update_img.sh
nel_os_bootloader/.cargo/: config.toml
nel_os_bootloader/esp/: NvVars
nel_os_bootloader/esp/efi/boot/: bootx64.efi
nel_os_bootloader/src/: main.rs
nel_os_common/: Cargo.toml
nel_os_common/src/: gop.rs  lib.rs  memory.rs
nel_os_kernel/: Cargo.toml  triple_fault_fix.md  x86_64-nel_os.json
nel_os_kernel/.cargo/: config.toml
nel_os_kernel/.serena/: project.yml
nel_os_kernel/src/: acpi.rs  allocator.rs  constant.rs  cpuid.rs  graphics.rs  logging.rs  main.rs  memory.rs  paging.rs  platform.rs  serial.rs  time.rs
nel_os_kernel/src/interrupt/: apic.rs  gdt.rs  idt.rs  mod.rs  subscriber.rs
nel_os_kernel/src/memory/: memory.rs  mod.rs  paging.rs
nel_os_kernel/src/vmm/: mod.rs
nel_os_kernel/src/vmm/x86_64/: mod.rs
nel_os_kernel/src/vmm/x86_64/amd/: mod.rs  vcpu.rs  vmcb.rs
nel_os_kernel/src/vmm/x86_64/common/: linux.rs  mod.rs  segment.rs
nel_os_kernel/src/vmm/x86_64/intel/: asm.rs  controls.rs  cpuid.rs  cr.rs  ept.rs  fpu.rs  io.rs  mod.rs  msr.rs  qual.rs  register.rs  vcpu.rs  vmcs.rs  vmxon.rs
nel_os_kernel/src/vmm/x86_64/intel/auditor/: controls.rs
nel_os_kernel/src/vmm/x86_64/intel/vmcs/: controls.rs  err.rs  exit_reason.rs  mod.rs  segment.rs
