[package]
name = "nel_os_bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
goblin = { version = "0.10.0", features = ["elf32", "elf64", "endian_fd"], default-features = false }
log = "0.4.27"
uefi = { version = "0.35.0", features = ["logger", "panic_handler", "alloc"] }
x86 = "0.52.0"
nel_os_common = { path = "../nel_os_common" }
acpi = "5.2.0"
