[package]
name = "nel_os_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"
nel_os_common = { path = "../nel_os_common" }
linked_list_allocator = "0.9.1"
ab_glyph = { version = "0.2", features = ["libm"], default-features = false }
raw-cpuid = "11.5.0"
acpi = "5.2.0"
modular-bitfield = "0.12.0"
numeric-enum-macro = "0.2.0"
x86 = "0.52.0"
